--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,11 @@
             <version>1.6.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
 
     </dependencies>
 
