--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,6 @@ spring:
     url: jdbc:mysql://localhost:3306/tools
     username: root
     password: coderslab
-#springdoc:
-#  swagger-ui:
-#    default-models-expand-depth: -1
+springdoc:
+  swagger-ui:
+    default-models-expand-depth: -1
